INCLUDE( MacroInstallFramework )

IF ( APPLE )
   CRIMILD_INSTALL_FRAMEWORK( "SDL2-osx.zip" "SDL2" )
   CRIMILD_INSTALL_FRAMEWORK( "SDL2_mixer-osx.zip" "SDL2_mixer" )
ENDIF ()

FIND_PACKAGE( SDL2 REQUIRED )
FIND_PACKAGE( SDL2_mixer REQUIRED )

SET( CRIMILD_INCLUDE_DIRECTORIES 
	${CRIMILD_SOURCE_DIR}/core/src 
	${CRIMILD_SOURCE_DIR}/opengl/src
	${SDL2_INCLUDE_DIR}
	${SDL2_MIXER_INCLUDE_DIRS}
)

SET( CRIMILD_LIBRARY_LINK_LIBRARIES 
	crimild_core
	crimild_opengl
	${SDL2_LIBRARIES}
	${SDL2_MIXER_LIBRARIES}
)

IF ( CRIMILD_ENABLE_SCRIPTING )
	SET( CRIMILD_INCLUDE_DIRECTORIES
		 ${CRIMILD_INCLUDE_DIRECTORIES}
		 ${CRIMILD_SOURCE_DIR}/scripting/src 
		 ${CRIMILD_SOURCE_DIR}/third-party/lua/src )

	SET( CRIMILD_LIBRARY_LINK_LIBRARIES 
		 ${CRIMILD_LIBRARY_LINK_LIBRARIES} 
		 crimild_scripting )
ENDIF ( CRIMILD_ENABLE_SCRIPTING )

IF ( CRIMILD_ENABLE_PHYSICS )
	SET( CRIMILD_INCLUDE_DIRECTORIES
		 ${CRIMILD_INCLUDE_DIRECTORIES}
		 ${CRIMILD_SOURCE_DIR}/physics/src 
		 ${CRIMILD_SOURCE_DIR}/third-party/bullet-2.82-r2704/src )

	SET( CRIMILD_LIBRARY_LINK_LIBRARIES 
		 ${CRIMILD_LIBRARY_LINK_LIBRARIES} 
		 crimild_physics )
ENDIF ( CRIMILD_ENABLE_PHYSICS )

INCLUDE( ModuleBuildLibrary )

