INCLUDE( MacroInstallFramework )
INCLUDE( MacroExtractArchive )

SET( CRIMILD_INCLUDE_DIRECTORIES
	${CRIMILD_SOURCE_DIR}/core/src
	${CRIMILD_SOURCE_DIR}/opengl/src
)

SET( CRIMILD_LIBRARY_LINK_LIBRARIES
	crimild_core
)

IF ( CRIMILD_ENABLE_EMSCRIPTEN )
   EXTRACT_ARCHIVE( SDL2_mixer-2.0.1-ems.zip sdl_mixer-ems ${CRIMILD_SOURCE_DIR}/third-party )

   SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -s USE_SDL=2 -s USE_OGG=1 -s USE_VORBIS=1 -s USE_ZLIB=1" )
   SET( SDL2_LIBRARY "-s USE_SDL=2" )
   SET( SDL2_MIXER_INCLUDE_DIRS ${CRIMILD_SOURCE_DIR}/third-party/sdl_mixer-ems/include/SDL2 )
   SET( SDL2_MIXER_LIBRARIES SDL2_mixer )
   SET( CRIMILD_LINK_DIRECTORIES
   		${CRIMILD_LINK_DIRECTORIES}
		${CRIMILD_SOURCE_DIR}/third-party/sdl_mixer-ems/lib
   )
ELSEIF ( NOT WIN32 )
    IF ( APPLE )
   	  CRIMILD_INSTALL_FRAMEWORK( "SDL2-osx.zip" "SDL2" )
   	  CRIMILD_INSTALL_FRAMEWORK( "SDL2_mixer-osx.zip" "SDL2_mixer" )
    ENDIF ()

	FIND_PACKAGE( SDL2 REQUIRED )
	FIND_PACKAGE( SDL2_mixer REQUIRED )
ELSE ()
	EXTRACT_ARCHIVE( SDL2-2.0.8.zip sdl ${CRIMILD_SOURCE_DIR}/third-party )
	EXTRACT_ARCHIVE( SDL2_mixer-2.0.2.zip sdl_mixer ${CRIMILD_SOURCE_DIR}/third-party )

	SET( SDL2_INCLUDE_DIR ${CRIMILD_SOURCE_DIR}/third-party/sdl/include )
	SET( SDL2_MIXER_INCLUDE_DIRS ${CRIMILD_SOURCE_DIR}/third-party/sdl_mixer/include )
	SET( SDL2_LIBRARY SDL2 SDL2main )
	SET( SDL2_MIXER_LIBRARIES SDL2_mixer )

	SET( CRIMILD_LINK_DIRECTORIES
		 ${CRIMILD_LINK_DIRECTORIES}
		 ${CRIMILD_SOURCE_DIR}/third-party/sdl/lib/x86
		 ${CRIMILD_SOURCE_DIR}/third-party/sdl_mixer/lib/x86 )
ENDIF ()

SET( CRIMILD_INCLUDE_DIRECTORIES
	${CRIMILD_INCLUDE_DIRECTORIES}
	${CRIMILD_SOURCE_DIR}/third-party/glew/include
	${SDL2_INCLUDE_DIR}
	${SDL2_MIXER_INCLUDE_DIRS}
)

SET( CRIMILD_LIBRARY_LINK_LIBRARIES
	${CRIMILD_LIBRARY_LINK_LIBRARIES}
	${SDL2_LIBRARY}
	${SDL2_MIXER_LIBRARIES}
)

IF ( CRIMILD_ENABLE_SCRIPTING )
	SET( CRIMILD_INCLUDE_DIRECTORIES
		 ${CRIMILD_INCLUDE_DIRECTORIES}
		 ${CRIMILD_SOURCE_DIR}/scripting/src
		 ${CRIMILD_SOURCE_DIR}/third-party/lua/src )

	SET( CRIMILD_LIBRARY_LINK_LIBRARIES
		 ${CRIMILD_LIBRARY_LINK_LIBRARIES}
		 crimild_scripting )
ENDIF ( CRIMILD_ENABLE_SCRIPTING )

IF ( CRIMILD_ENABLE_PHYSICS )
	SET( CRIMILD_INCLUDE_DIRECTORIES
		 ${CRIMILD_INCLUDE_DIRECTORIES}
		 ${CRIMILD_SOURCE_DIR}/physics/src
		 ${CRIMILD_SOURCE_DIR}/third-party/bullet-2.82-r2704/src )

	SET( CRIMILD_LIBRARY_LINK_LIBRARIES
		 ${CRIMILD_LIBRARY_LINK_LIBRARIES}
		 crimild_physics )
ENDIF ( CRIMILD_ENABLE_PHYSICS )

INCLUDE( ModuleBuildLibrary )
