CMAKE_MINIMUM_REQUIRED( VERSION 2.8.10 FATAL_ERROR )

# Enable C++11 features
SET( CMAKE_CXX_FLAGS "-std=c++11 -stdlib=libc++ -U__STRICT_ANSI__ -fvisibility=hidden -fvisibility-inlines-hidden" )

PROJECT( fontgen )

FILE( GLOB_RECURSE SOURCE_FILES "${PROJECT_SOURCE_DIR}/src/*.cpp" )
FILE( GLOB_RECURSE HEADER_FILES "${PROJECT_SOURCE_DIR}/src/*.hpp" ) 

IF ( APPLE ) 
	SET( FREETYPE_INCLUDE_DIRS "/usr/local/include/freetype2" )
	SET( FREETYPE_LIBRARIES freetype )
ELSE ( APPLE )
	FIND_PACKAGE( Freetype )
	IF ( NOT FREETYPE_FOUND )
		FIND_LIBRARY( FREETYPE_LIBRARIES NAMES libfreetype freetype.dll PATHS "./libs/MacOS" "./libs/Windows" DOC "Freetype library" )
		FIND_PATH( FREETYPE_INCLUDE_DIRS ftbuild.h "./includes" DOC "Freetype includes" )
	ENDIF ( NOT FREETYPE_FOUND )
ENDIF ( APPLE )

SET( CRIMILD_FONTGEN_DEPENDENCIES 
	crimild_core 
	${FREETYPE_LIBRARIES} 
)

INCLUDE_DIRECTORIES(
	${CRIMILD_SOURCE_DIR}/core/src
	${FREETYPE_INCLUDE_DIRS}
	src
)

IF ( APPLE )
	LINK_DIRECTORIES( /usr/local/lib )
ENDIF ( APPLE )

ADD_EXECUTABLE( ${PROJECT_NAME} ${SOURCE_FILES} ${HEADER_FILES} )

TARGET_LINK_LIBRARIES( ${PROJECT_NAME} ${CRIMILD_FONTGEN_DEPENDENCIES} )

